<resources>
    <string name="app_name">KidsApp</string>
    <string name="login">Login</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="register">Create an account!</string>
    <string name="username">Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Select Birthday</string>
    <string name="btnRegister">Register</string>
    <string name="now_login">Go to Login!</string>
    <string name="call">+38344111222</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnNr1">ONE</string>
    <string name="txtView_one">ONE</string>
    <string name="txtView_ten">TEN</string>
    <string name="txtView_two">TWO</string>
    <string name="txtView_three">THREE</string>
    <string name="txtView_four">FOUR</string>
    <string name="txtView_five">FIVE</string>
    <string name="txtView_six">SIX</string>
    <string name="txtView_seven">SEVEN</string>
    <string name="txtView_eight">EIGHT</string>
    <string name="txtView_nine">NINE</string>
    <string name="txtView_num">Numbers</string>
    <string name="textview">TextView</string>
    <string name="color">Color</string>
    <string name="redcolor">Red</string>
    <string name="orangecolor">Orange</string>
    <string name="yellowcolor">Yellow</string>
    <string name="greencolor">Green</string>
    <string name="bluecoloe">Blue</string>
    <string name="beigecolor">Beige</string>
    <string name="pinkcolor">Pink</string>
    <string name="greycolor">Grey</string>
    <string name="browncolor">Brown</string>
    <string name="blackcolor">Black</string>
    <string name="whitecolor">White</string>
    <string name="txtView_call">+38344111222</string>
    <string name="txtView_mail">codetechnology@gmail.com</string>
    <string name="alphabet">Alphabet</string>
    <string name="consonants">Consonants</string>
    <string name="vowels">Vowels</string>
    <string name="description">Image</string>
    <string name="codetechnology_gmail_com">codetechnology@gmail.com</string>
    <string name="colorname">ColorName</string>
    <string name="check_remember">Remember me</string>
    <string name="type">Type</string>
    <string name="animals">Animals</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="_38344111222">+38344111222</string>
    <string name="_38349122133">+38349122133</string>
    <string name="_38345100100">+38345100100</string>
    <string name="call_us">Call us</string>
    <string name="infoHelp">KidsApp is a mobile application for Android OS that makes kids familiar with alphabet, numbers, colors and basic things. Kids who struggle with spelling can say a word or sound it out, and then see how it’s spelled on screen. There are a lot of interesting stories to read too. Have fun!</string>
    <string name="titleHelp">Welcome to Kids Application</string>
    <string name="tap_to_speech">Tap to Speech</string>
    <string name="converter">Converter</string>
    <string name="information_about_us">Information About Us</string>
    <string name="saySomething">Say something and see how it’s spelled</string>

</resources>
