<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/alphabetLayout"
    tools:context=".AlphabetActivity"
    android:orientation="vertical">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffff">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAlphabet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabet" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabConsonants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consonants" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabVowels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vowels" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.viewpager.widget.ViewPager>

</LinearLayout>